force-app/main/default/objects/Account_Payment_Information__c/Account_Payment_Information__c.object-meta.xml
<CustomObject>
    <label>Account Payment Information</label>
    <nameField>
        <displayFormat>ICAPI-{00000}</displayFormat>
        <label>Account Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Payment Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>