force-app/main/default/objects/Account_Payment_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be auto-filled based on the Opportunity.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Payment Information</relationshipLabel>
    <relationshipName>Account_Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>