force-app/main/default/objects/Account_Payment_Information__c/fields/Advance_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Advance_Paid_Date__c</fullName>
    <label>Advance Paid Date</label>
    <type>Date</type>
</CustomField>