force-app/main/default/objects/Account_Payment_Information__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <label>Advance Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>