force-app/main/default/objects/Account_Payment_Information__c/fields/Amount_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Paid__c</fullName>
    <formula>IF(  ISPICKVAL(Account_Type__c , &quot;Corporate&quot;) , Total_Amount_With_Tax__c -  Amount_Received__c, Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount to be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>