force-app/main/default/objects/Account_Payment_Information__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be auto-filled based on the Opportunity.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Account Payment Information</relationshipLabel>
    <relationshipName>Account_Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>