force-app/main/default/objects/Account_Payment_Information__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <defaultValue>0.09</defaultValue>
    <label>CGST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>