force-app/main/default/objects/Account_Payment_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Payment Information</relationshipLabel>
    <relationshipName>Account_Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>