force-app/main/default/objects/Account_Payment_Information__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Will be auto-filled based on the Opportunity.</inlineHelpText>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Account Payment Information</relationshipLabel>
    <relationshipName>Account_Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>