force-app/main/default/objects/Account_Payment_Information__c/fields/Email1_Primary__c.field-meta.xml
<CustomField>
    <fullName>Email1_Primary__c</fullName>
    <formula>Account__r.Email1_Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email1 (Primary)</label>
    <type>Text</type>
</CustomField>