force-app/main/default/objects/Account_Payment_Information__c/fields/Email2_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Email2_Secondary__c</fullName>
    <formula>Account__r.Email2_Secondary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email2 (Secondary)</label>
    <type>Text</type>
</CustomField>