force-app/main/default/objects/Account_Payment_Information__c/fields/Enroll_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Enroll_for_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to create an Account Training Information record.  Please note that once checked, this box CANNOT BE UNCHECKED!</inlineHelpText>
    <label>Enroll for Training</label>
    <type>Checkbox</type>
</CustomField>