force-app/main/default/objects/Account_Payment_Information__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <formula>IF( (Enroll_for_Training__c = True) ,&quot;Done&quot;,&quot;Pending&quot;)</formula>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>