force-app/main/default/objects/Account_Payment_Information__c/fields/Final_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Paid_Date__c</fullName>
    <label>Final Paid Date</label>
    <type>Date</type>
</CustomField>