force-app/main/default/objects/Account_Payment_Information__c/fields/Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment__c</fullName>
    <label>Final Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>