force-app/main/default/objects/Account_Payment_Information__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Needs to be filled in for Indian states other than Tamil Nadu.</inlineHelpText>
    <label>IGST %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>