force-app/main/default/objects/Account_Payment_Information__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <inlineHelpText>Invoice Number needs to be in this format - sample: INF/7645/YYYY-YY</inlineHelpText>
    <label>Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>