force-app/main/default/objects/Account_Payment_Information__c/fields/Invoice_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Link__c</fullName>
    <label>Invoice Number Link</label>
    <type>Url</type>
</CustomField>