force-app/main/default/objects/Account_Payment_Information__c/fields/Lead_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Create_Date__c</fullName>
    <description>Lead Created Date From Opportunity</description>
    <formula>Opportunity__r.Lead_Create_Date__c</formula>
    <label>Lead Create Date</label>
    <type>Date</type>
</CustomField>