force-app/main/default/objects/Account_Payment_Information__c/fields/Lead_Created_Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Total_Days__c</fullName>
    <description>Total Lead Created Days</description>
    <formula>TEXT(Lead_Create_Date__c - DATEVALUE(CreatedDate ))+ &quot; Days&quot;</formula>
    <label>Lead Created Total Days</label>
    <type>Text</type>
</CustomField>