force-app/main/default/objects/Account_Payment_Information__c/fields/Mobile2_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Mobile2_Secondary__c</fullName>
    <formula>Account__r.Mobile2_Secondary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile2 (Secondary)</label>
    <type>Text</type>
</CustomField>