force-app/main/default/objects/Account_Payment_Information__c/fields/Next_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Date__c</fullName>
    <inlineHelpText>If status is Partially Received, then the Next Payment Status field is mandatory.</inlineHelpText>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>