force-app/main/default/objects/Account_Payment_Information__c/fields/Number_of_Trainees_API__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trainees_API__c</fullName>
    <label>Number of Trainees-API</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>