force-app/main/default/objects/Account_Payment_Information__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Payment Information</relationshipLabel>
    <relationshipName>Account_Payment_Information</relationshipName>
    <type>Lookup</type>
</CustomField>