force-app/main/default/objects/Account_Payment_Information__c/fields/Participant_Location__c.field-meta.xml
<CustomField>
    <fullName>Participant_Location__c</fullName>
    <label>Participant Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>