force-app/main/default/objects/Account_Payment_Information__c/fields/Pay_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Out_Date__c</fullName>
    <label>Pay Out Date</label>
    <type>Date</type>
</CustomField>