force-app/main/default/objects/Account_Payment_Information__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <label>Payee Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>