force-app/main/default/objects/Account_Payment_Information__c/fields/Payment_Collected__c.field-meta.xml
<CustomField>
    <fullName>Payment_Collected__c</fullName>
    <label>Payment Collected</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>