force-app/main/default/objects/Account_Payment_Information__c/fields/Payment_details__c.field-meta.xml
<CustomField>
    <fullName>Payment_details__c</fullName>
    <formula>&quot;Paid by&quot;+&quot; &quot;+  TEXT(Payment_Mode__c ) +&quot; &quot;+ &quot;On&quot; +&quot; &quot;+ TEXT( Payment_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment details</label>
    <type>Text</type>
</CustomField>