force-app/main/default/objects/Account_Payment_Information__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <inlineHelpText>If status is Yet to Receive - the participant is yet to make a decision on the payment.  If status is Partially Received, the Next Payment Date is mandatory.  If status is Fully Received, Next Payment Date is to be left blank.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yet To Receive</fullName>
                <default>true</default>
                <label>Yet To Receive</label>
            </value>
            <value>
                <fullName>Partially Received</fullName>
            </value>
            <value>
                <fullName>Fully Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>