force-app/main/default/objects/Account_Payment_Information__c/fields/PMI_Membership_Voucher__c.field-meta.xml
<CustomField>
    <fullName>PMI_Membership_Voucher__c</fullName>
    <label>PMI Membership Voucher</label>
    <length>30</length>
    <type>Text</type>
</CustomField>