force-app/main/default/objects/Account_Payment_Information__c/fields/PMI_Membership_Voucher_Date__c.field-meta.xml
<CustomField>
    <fullName>PMI_Membership_Voucher_Date__c</fullName>
    <label>PMI Membership Voucher Date</label>
    <type>Date</type>
</CustomField>