force-app/main/default/objects/Account_Payment_Information__c/fields/PMP_Exam_Voucher__c.field-meta.xml
<CustomField>
    <fullName>PMP_Exam_Voucher__c</fullName>
    <label>PMP Exam Voucher</label>
    <length>30</length>
    <type>Text</type>
</CustomField>