force-app/main/default/objects/Account_Payment_Information__c/fields/PMP_Exam_Voucher_Date__c.field-meta.xml
<CustomField>
    <fullName>PMP_Exam_Voucher_Date__c</fullName>
    <label>PMP Exam Voucher Date</label>
    <type>Date</type>
</CustomField>