force-app/main/default/objects/Account_Payment_Information__c/fields/Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Amount__c</fullName>
    <label>Sales Amount</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>