force-app/main/default/objects/Account_Payment_Information__c/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <inlineHelpText>Opportunity&apos;s final amount, will be auto-filled. In case this needs to be edited, please do so in the corresponding Opportunity record.</inlineHelpText>
    <label>Taxable Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>