force-app/main/default/objects/Account_Payment_Information__c/fields/Total_Amount_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_With_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Amount With Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>