force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Invoice_Date__c</fullName>
    <label>Voucher Invoice Date</label>
    <type>Date</type>
</CustomField>