force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Invoice_Number__c</fullName>
    <label>Voucher Invoice Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>