force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Invoice_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Invoice_Number_Link__c</fullName>
    <label>Voucher Invoice Number Link</label>
    <type>Url</type>
</CustomField>