force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Payment_Date__c</fullName>
    <label>Voucher Payment Date</label>
    <type>Date</type>
</CustomField>