force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Payment_Mode__c</fullName>
    <label>Voucher Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEFT-SBI</fullName>
            </value>
            <value>
                <fullName>NEFT-HDFC</fullName>
            </value>
            <value>
                <fullName>InstaMojo</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>