force-app/main/default/objects/Account_Payment_Information__c/fields/Voucher_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Payment_Status__c</fullName>
    <formula>&apos;Paid by&apos;+&quot; &quot;+TEXT(Voucher_Payment_Mode__c)+&apos;on&apos;+&quot; &quot;+TEXT(Voucher_Payment_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Payment Status</label>
    <type>Text</type>
</CustomField>