force-app/main/default/objects/Account_Payment_Information__c/validationRules/Course_and_Batch_Matching.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_and_Batch_Matching</fullName>
    <active>true</active>
    <errorConditionFormula>Course__c != Batch__r.Course__c   &amp;&amp;   !ISBLANK(  Batch__c )</errorConditionFormula>
    <errorDisplayField>Batch__c</errorDisplayField>
    <errorMessage>Oops! This Batch must correspond to the Course the participant has enrolled for.</errorMessage>
</ValidationRule>