force-app/main/default/objects/Account_Payment_Information__c/validationRules/Enroll_To_Training_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Enroll_To_Training_Read_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND( PRIORVALUE( Enroll_for_Training__c ) = True, ISCHANGED( Enroll_for_Training__c ))</errorConditionFormula>
    <errorDisplayField>Enroll_for_Training__c</errorDisplayField>
    <errorMessage>OOPS! The Enroll to Training box cannot be unchecked once it is checked</errorMessage>
</ValidationRule>