force-app/main/default/objects/Account_Payment_Information__c/validationRules/Invoice_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Email_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Invoice_Number__c ) ,!ISBLANK( Invoice_Number_Link__c ) )</errorConditionFormula>
    <errorDisplayField>Invoice_Number__c</errorDisplayField>
    <errorMessage>Fill the Invoice Number Field</errorMessage>
</ValidationRule>