force-app/main/default/objects/Account_Payment_Information__c/validationRules/Invoice_Num_Format_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Num_Format_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK( Invoice_Number__c ) ,NOT( REGEX(  Invoice_Number__c  , &quot;[I]{1}[N]{1}[F]{1}/[0-9]{4}/[0-9]{4}-[0-9]{2}&quot;) ))</errorConditionFormula>
    <errorDisplayField>Invoice_Number__c</errorDisplayField>
    <errorMessage>Invoice number needs to be in this format - sample: INF/7645/YYYY-YY</errorMessage>
</ValidationRule>