force-app/main/default/objects/Account_Payment_Information__c/validationRules/Next_Payment_Date_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Payment_Date_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK( Next_Payment_Date__c ) ,( Next_Payment_Date__c  &lt;=  TODAY() ))</errorConditionFormula>
    <errorDisplayField>Next_Payment_Date__c</errorDisplayField>
    <errorMessage>Next Payment Cannot be Today or Less</errorMessage>
</ValidationRule>