force-app/main/default/objects/Account_Payment_Information__c/validationRules/Partially_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>Partially_Received</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Payment_Status__c , &apos;Partially Received&apos;) , Pending_Amount__c  &lt;=  0)</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>If the status is Partially Received, then the Pending Amount field cannot be empty or zero.</errorMessage>
</ValidationRule>