force-app/main/default/objects/Account_Payment_Information__c/validationRules/Payment_Status_Cannot_Reversed.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Status_Cannot_Reversed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( ISPICKVAL( PRIORVALUE( Payment_Status__c ) , &quot;Partially Received&quot;), ISPICKVAL( Payment_Status__c , &quot;Yet To Receive&quot;) ),AND( ISPICKVAL( PRIORVALUE( Payment_Status__c ) , &quot;Fully Received&quot;), OR((ISPICKVAL( Payment_Status__c , &quot;Yet To Receive&quot;)),(ISPICKVAL( Payment_Status__c , &quot;Partially Received&quot;)) ) ))</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>Payment Status Field Error :
If Payment Status is Fully Received, this field cannot be edited further.</errorMessage>
</ValidationRule>