force-app/main/default/objects/Account_Payment_Information__c/validationRules/When_Full_Amount_is_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Full_Amount_is_Received</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Payment_Status__c , &apos;Fully Received&apos;) ,! ISBLANK( Next_Payment_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>If status is Fully Received, Next Payment Date is to be left blank.</errorMessage>
</ValidationRule>