force-app/main/default/objects/Account_Payment_Information__c/validationRules/When_Partial_Amount_Received.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Partial_Amount_Received</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Payment_Status__c , &apos;Partially Received&apos;) , ISBLANK( Next_Payment_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Payment_Status__c</errorDisplayField>
    <errorMessage>If status is Partially Received, then the Next Payment Status field is mandatory i.e. it cannot be empty.</errorMessage>
</ValidationRule>