force-app/main/default/objects/Account_Payment_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Course__c</columns>
    <columns>Enroll_for_Training__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Taxable_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>