force-app/main/default/objects/Account_Payment_Information__c/listViews/API_List_Views.listView-meta.xml
<ListView>
    <fullName>API_List_Views</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Amount_Received__c</columns>
    <columns>Pending_Amount__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>API List Views</label>
</ListView>